PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Branch_no_expression.pf
module DataStructures{

    Int x = 9

    fun main() : Int{
        if {
            print(x)
        }
    }
}